<resources>
    <string name="app_name" translatable="false">DS H008 v2</string>

    <string name="widget_calendar">Calendar</string>
    <string name="widget_basic_description">Calendar in clock format</string>

    <string name="title_install">Install on watch</string>

    <string name="tooltip_app_more">More</string>
    <string name="tooltip_add">Add</string>
    <string name="tooltip_wrap">Enable/Disable word wrap</string>
    <string name="tooltip_go_back">Go back</string>
    <string name="tooltip_copy_log">Copy log</string>

    <string name="title_how_to_connect">How to connect?</string>

    <string name="how_to_connect_step_number">Step %d0 of %d1</string>

    <string name="how_to_connect_step_0">Connect to the WiFi</string>
    <string name="how_to_connect_step_1">Enable the developer options</string>
    <string name="how_to_connect_step_2">Enable the wireless debugging</string>
    <string name="how_to_connect_step_3">Get the IP address and port</string>
    <string name="how_to_connect_step_4">Paring</string>
    <string name="how_to_connect_step_5">Install</string>

    <string name="how_to_connect_instruction_0">
        - Scroll from top to bottom, to show the control panel;
        \n\n- Tap and hold the WiFi button¹.
        \n\n- Enable it and wait while the network list is loaded;
        \n\n- Connect to a network².

        \n\n\n¹ <i><u>OR</u> go to <b>Settings > Connections > WiFi</b></i>.
        \n² <i>Both your phone and watch <i><u>must</u></i> be connected to the same network!</i>
    </string>

    <string name="how_to_connect_instruction_1">
        If the developer mode is not enabled, enable it:
        \n\n- Go to <b>Settings > About watch > Software information</b>;
        \n\n- Locate <b>Software version </b>and tap the item 5 times fast¹ ².
        \n\n¹ In case you set a lockscreen password, it will be requested.
        \n² You will receive a toast notification when the Developer options is enabled.
    </string>

    <string name="how_to_connect_instruction_2">
        - Navigate back to the settings screen;
        \n\n- Scroll to, and open, the <b>Developer options</b> menu;
        \n\n- Scroll to, and open, the <b>Wireless debugging</b> menu;
        \n\n- Enable it.
    </string>

    <string name="how_to_connect_instruction_3">
        Once the Wireless debugging is enabled:
        \n\n- Find the option <b>IP address and port</b>;
        \n\n- In this app, type the information on the <b>IP and port</b> input bellow.
    </string>

    <string name="how_to_connect_instruction_4">
        <b>In case you have already paired once, you can skip this step!</b> In case you have not, do:

        \n\n- Scroll to, and open, the <b>Pair new device</b> menu¹;
        \n\n- In this app, type the watch <b>IP address &amp; Port</b> information on the <b>Paring IP and port</b> input bellow;
        \n\n- In this app, type the watch <b>Wi-FI pairing code</b> information on the <b>Paring code</b> input bellow;

        \n\n\n¹ Keep the paring screen open in the watch while pairing. Once it is paired it will close automatically.
    </string>

    <string name="how_to_connect_instruction_5">
        <i>Back in this app, do:</i>
        \n\n- Select the version you wish to install¹ ² ³ ⁴;
        \n\n- Click on <b>Install on watch;</b>
        \n\n- Follow the installation progress.

        \n\n\n¹ <i>The latest version is always the selected when you open this app;</i>
        \n² <i>If you do not have the watch app installed I recommend not changing the version selected (latest);</i>
        \n³ <i>If you wish to update the watch app to a specific version you must select a version greater than the one installed on the watch;</i>
        \n⁴ <i>If you wish to downgrade the watch app, first you need to uninstall the one installed on the watch.</i>
    </string>

    <string name="how_to_connect_btn_previous">Previous</string>
    <string name="how_to_connect_btn_next">Next</string>

    <string name="version_popup_title">Select a version</string>
    <string name="version_loading">Loading versions…</string>
    <string name="version_error">No version available</string>
    <string name="connectingAddressPortHint">IP and port, e.g.: 192.168.1.15:46355</string>
    <string name="paringAddressPortHint">Paring IP and port, e.g.: 192.168.1.15:40635</string>
    <string name="paringCodeHint">Paring code, e.g.: 761542</string>

    <string name="btn_install">Install on watch</string>

    <string name="more_check_update">Check for phone app update</string>
    <string name="more_github">Open project on Github</string>
    <string name="more_cache">Remove cached versions</string>
    <string name="more_about">About</string>
    <string name="more_reset">Reset settings</string>
    <string name="more_install_on_watch">@string/title_install</string>
    <string name="more_sync_watch">Sync with watch once</string>
    <string name="more_remove_colors">Remove all colors</string>

    <string name="toast_error_generic">Something went wrong!</string>
    <string name="toast_error_version_fetch">Could not fetch new versions!</string>
    <string name="toast_error_version_cached">Could not get cached versions!</string>
    <string name="toast_error_invalid_ip_connecting">Invalid IP and port!</string>
    <string name="toast_error_invalid_ip_paring">Invalid paring IP and port!</string>
    <string name="toast_error_invalid_code_paring">Invalid paring code!</string>
    <string name="toast_error_invalid_version">Invalid version selected!</string>
    <string name="toast_error_installer_error_update">Could not check for updates!</string>

    <string name="toast_info_refreshing">Refreshing</string>
    <string name="toast_info_installer_checking_update">Checking… Wait!</string>
    <string name="toast_info_installer_is_up_to_date">Installer is up to date!</string>
    <string name="toast_info_installer_update_downloading">Downloading…</string>
    <string name="toast_info_installer_update_download_install">Once the download is complete, install the .apk to update!</string>
    <string name="toast_info_permission">Permission to access calendar is required!</string>

    <string name="toast_success_generic">Done!</string>

    <string name="popup_btn_cancel">Cancel</string>
    <string name="popup_btn_ok">OK</string>
    <string name="popup_btn_set">Set</string>
    <string name="popup_btn_reset">Reset</string>
    <string name="popup_btn_sync">Sync</string>
    <string name="popup_btn_remove">Remove</string>

    <string name="title_progress">Installation</string>

    <string name="progress_paring">Paring to %s</string>
    <string name="progress_paring_error">Error while paring to %s</string>
    <string name="progress_paring_success">Successfully paired to %s</string>

    <string name="progress_connecting">Connecting to %s</string>
    <string name="progress_connecting_error">Error while connecting to %s</string>
    <string name="progress_connecting_pair">Pairing is required</string>
    <string name="progress_connecting_success">Successfully connected to %s</string>

    <string name="progress_checking_cache">Checking on cache for file</string>
    <string name="progress_checking_cache_found">File found on cache</string>
    <string name="progress_checking_cache_not_found">File not found on cache</string>
    <string name="progress_checking_cached">File cached</string>

    <string name="progress_download_initialized">Initializing download</string>
    <string name="progress_download_progress">Download progress: %d%</string>
    <string name="progress_download_progress_complete">Download complete</string>
    <string name="progress_download_progress_error">Error while downloading</string>

    <string name="progress_installing">Initializing installation</string>
    <string name="progress_installing_not_found">File not found</string>
    <string name="progress_installing_wrong_type">File must be a .apk</string>
    <string name="progress_installing_error">Error while installing</string>
    <string name="progress_installing_error_downgrade">Version installed on watch is greater than v%s</string>

    <string name="progress_disconnected">Disconnected from the watch</string>

    <string name="progress_wait">Wait…</string>
    <string name="progress_success">Success</string>

    <string name="progress_end">End</string>
    <string name="progress_end_message">
        \n\nThe watch face is installed on you watch!
        \nYou can now leave this screen.
        \nI recommend unpairing the device connect and disabling the \"Wireless debugging\" feature!
    </string>

    <string name="background_color">Background color</string>
    <string name="event_colors">Palette</string>
    <string name="event_colors_description">The app will try to use the event color. In case it cannot be used the app will use the colors added here, in sequence. In case of no colors here the app will use a default palette. Enable the option bellow to force the use of this color palette even if a color is set to the event.</string>
    <string name="force_palette">Force palette</string>

    <string name="show_all_day_events">All day events</string>
    <string name="show_rounded_corners">Rounded corners</string>
    <string name="show_border_only">Border only</string>
    <string name="show_hidden_events_number">Show amount of events hidden</string>
    <string name="force_uppercase">Force uppercase</string>
    <string name="events_info_color">Info text color</string>

    <string name="hand_style">Hand style</string>
    <string name="show_second">Show seconds</string>
    <string name="hour_color">Hour color</string>
    <string name="minute_color">Minute color</string>
    <string name="second_color">Second color</string>

    <string name="color_picker_hex">Hex</string>
    <string name="color_picker_alpha">Alpha</string>
    <string name="color_picker_red">Red</string>
    <string name="color_picker_green">Green</string>
    <string name="color_picker_blue">Blue</string>

    <string name="menu_settings_reset_app_settings_confirm_description">Reset all settings from the app to the default values?</string>
    <string name="menu_settings_sync_confirm_description">Sync once the settings of the phone app with the watch app? This will change only the calendar settings on you watch to match the phone settings!</string>

    <string name="menu_settings_sync_colors_confirm_description">Sync once the palette of the phone app with the watch app? This will change only the palette settings on you watch to match the phone!</string>

    <string name="more_remove_colors_description">Remove all colors set here?</string>
</resources>